cache categories.  fix image cache